--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,74 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <div style="display: flex; flex-direction: column; overflow: hidden;  ">
+    <div style="padding: 25px; display: flex">
+      <form class="header-form">
+        <div>
+          <div class="label ion-hide-xl-down">
+            <ion-label>Golf Club</ion-label>
+          </div>
+          <ion-select [compareWith]="compareWithId" interface="action-sheet"
+                      name="golfClub"
+                      [ngModel]="currentGolfClub$ | async"
+                      (ionChange)="setCurrentGolfClub($event)"
+                      placeholder="Golf club">
+            <ion-select-option *ngFor="let club of (golfClubs$ | async)"
+                               [value]="club">{{club.name}}</ion-select-option>
+          </ion-select>
+        </div>
+        <div>
+          <div class="label ion-hide-xl-down">
+            <ion-label>Location</ion-label>
+          </div>
+          <ion-select [compareWith]="compareWithId" interface="action-sheet"
+                      name="location"
+                      [ngModel]="currentLocation$ | async"
+                      (ionChange)="setCurrentLocation($event)"
+                      placeholder="Location">
+            <ion-select-option *ngFor="let location of locations$ | async"
+                               [value]="location">{{location.name}}</ion-select-option>
+          </ion-select>
+        </div>
+        <div style="flex: 1; min-width: 200px" class="ion-hide-lg-down">
+          <ion-searchbar [placeholder]="'search' | translate"></ion-searchbar>
+        </div>
+      </form>
+      <div style="display: flex; align-items: center">
+        <img class="icon" [src]="'/assets/icon/' + currentLang.toUpperCase() + '.png'" alt="" (click)="toggleLang()">
+        <img class="icon" [src]="'/assets/icon/logout.png'" [alt]="'logout' | translate" [routerLink]="['/logout']">
+      </div>
+    </div>
+    <div style="flex: 1; min-height: 0; padding: 22.5px">
+      <div>
+        <div>
+          <div style="color: #184c7c; font-size: 110%; margin-bottom: 15px" [innerHTML]="'choose_table' | translate">
+          </div>
+        </div>
 
-<ion-content>
+        <div *ngIf="tableStatus$ | async as tableStatus">
+          <small *ngIf="tableStatus === 'idle'">No location selected!</small>
+          <ion-spinner *ngIf="tableStatus === 'loading'"></ion-spinner>
+        </div>
 
+        <div class="items">
+            <ion-button *ngFor="let table of tables$ | async"
+                        size="small"
+                        class="item {{table.status}}"
+                        [routerLink]="['/order', table.id]">
+              <span style="padding: 10px 20px">{{table.name}}</span>
+            </ion-button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button [color]="'light'" [routerLink]="['/settings']">
+      <ion-icon name="settings-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
+
+
