--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,8 @@
 <ion-content class="login-content ion-padding">
   <div class="background" style="display: flex; flex-direction: column">
     <ion-row style="flex: 3" class="logo-row ion-align-items-center">
-      <ion-col size-xs="6" offset-xs="3" size-sm="4" offset-sm="4" size-md="3" offset-md="4.5" size-lg="3" offset-lg="4.5" class="ion-text-center">
+      <ion-col size-xs="6" offset-xs="3" size-sm="4" offset-sm="4" size-md="3" offset-md="4.5" size-lg="3"
+               offset-lg="4.5" class="ion-text-center">
         <div style="position: relative">
           <img class="logo" style="width: 100%" src="/assets/images/logo-west-lakes-white.svg"/>
         </div>
@@ -12,34 +13,32 @@
       <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" size-xl="3" offset-xl="4.5">
         <div class="login-box ion-padding ion-margin-top">
           <div class="ion-padding">
-            <form #loginForm="ngForm" novalidate>
+            <form [formGroup]="formLogin">
               <ion-row class="ion-margin-bottom" style="position: relative">
                 <img class="input-icon" src="/assets/icon/user.png">
-                <input class="ion-padding-start" type="text" [placeholder]="'username' | translate" name="username"
-                       [(ngModel)]="credentials.username"
-                       #username="ngModel"
-                       required>
+                <input class="ion-padding-start" type="text" [placeholder]="'username' | translate" formControlName="username">
               </ion-row>
               <ion-row class="ion-margin-bottom">
-                <ion-text color="warning" [hidden]="username.valid || submitted == false">
+                <ion-text color="warning"
+                          *ngIf="formLogin.controls['username'].invalid && formLogin.controls['username'].touched">
                   {{'required_username'| translate}}
                 </ion-text>
               </ion-row>
               <ion-row class="ion-margin-bottom" style="position: relative">
                 <img class="input-icon" src="/assets/icon/key.png">
-                <input class="ion-padding-start" type="password" [placeholder]="'password'| translate" name="password"
-                       [(ngModel)]="credentials.password"
-                       #password="ngModel"
-                       required>
+                <input class="ion-padding-start" type="password" [placeholder]="'password'| translate"
+                       formControlName="password">
               </ion-row>
               <ion-row class="ion-margin-bottom">
-                <ion-text color="warning" [hidden]="password.valid || submitted == false">
-                  {{'required_username'| translate}}
+                <ion-text color="warning"
+                          *ngIf="formLogin.controls['password'].invalid && formLogin.controls['password'].touched">
+                  {{'required_password'| translate}}
                 </ion-text>
               </ion-row>
               <ion-row>
                 <ion-col class="ion-no-padding">
-                  <button (click)="onLogin(loginForm)" type="submit">{{'login'| translate}}</button>
+                  <button (click)="onLogin()" type="submit"
+                          [disabled]="formLogin.invalid">{{'login'| translate}}</button>
                 </ion-col>
               </ion-row>
             </form>
