--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -1,9 +1,80 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>order</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-app>
+  <ion-content [fullscreen]="true">
+    <div style="height: 100%; width: 100%; background: white; display: flex; align-items: stretch; overflow: hidden">
+      <div
+        style="width: 100px;min-width: 100px; background: white; display: flex; flex-direction: column; overflow: hidden">
+        <img class="logo" style="height: 100px; width: 100px; background:#184a7b" src="/assets/icon/menu.png" alt=""
+             [routerLink]="['/home']">
+        <div class="menu">
+          <ng-container>
+            <div *ngFor="let cate of parentCategories$ | async"
+                 class="menu-item" [class.active]="currentMenu?.id === cate.id"
+                 (click)="selectParentCategory(cate)">
+              <img src="/assets/icon/drink.png"/>
+              <div> {{cate.name}}</div>
+            </div>
+          </ng-container>
+          <!--                    <ng-container *ngIf="location.enable_menu">-->
+          <!--                      <div class="menu-item" [class.active]="currentMenu?.id === menu.id"-->
+          <!--                           (click)="selectMenu(menu)"-->
+          <!--                           *ngFor="let menu of menus; let i = index">-->
+          <!--                        <img src="/assets/icon/drink.png"/>-->
+          <!--                        <div> {{menu.name}}</div>-->
+          <!--                      </div>-->
+          <!--                    </ng-container>-->
+        </div>
+      </div>
+      <div style="flex: 1; display: flex; flex-direction: column; min-width: 0; background: #eeedf3">
+        <div class="header" style="height: 6rem; display: flex; padding: 1.5rem; padding-bottom: 0">
+          <div class="search"
+               style="background: white; flex: 1; border-radius: 35px; display: flex; align-items: center; padding: 0.75rem 1.5rem">
+            <div style="border-right: 2px solid black; padding-right: 0.75rem; white-space: nowrap">
+              {{'food_beverages'| translate}}
+            </div>
+            <div style="padding-left: 10px; flex: 1">
+              <ion-searchbar [placeholder]="'search_item' | translate" [(ngModel)]="filter.search"
+                             (ngModelChange)="updateSearch()"></ion-searchbar>
+            </div>
+          </div>
+          <button style="margin-left: 1.5rem" (click)="toggleLang()">
+            <!--            <img class="icon" [src]="'/assets/icon/' + currentLang.toUpperCase() + '.png'" alt="" style="height: 4rem; width: 4rem">-->
+          </button>
+          <button style="margin-left: 1.5rem">
+            <img class="icon" src="/assets/icon/lock.png" alt="" style="height: 4rem; width: 4rem">
+          </button>
+        </div>
+        <div class="main-content"
+             style=" flex: 1; display: flex; align-items: stretch; padding: 10px; overflow: hidden; min-width: 0">
+          <div class="order" style="flex: 1; display: flex; flex-direction: column; overflow: hidden; min-width: 0">
+            <div class="categories">
+              <div class="category-item" [class.active]="!currentSubCate" (click)="selectSubCategory(null)">All</div>
+              <div class="category-item" *ngFor="let subCate of subCategories"
+                   (click)="selectSubCategory(subCate)"
+                   [class.active]="currentSubCate && currentSubCate.id === subCate.id">
+                <img [src]="'/assets/icon/buger.png'" alt="" style="height: 1rem; width: 1rem; margin-right: 0.5rem">
+                {{subCate.name}}
+              </div>
+            </div>
+            <!--            <app-list-products [location]="location" (slidesLength)="updatePagination($event)"-->
+            <!--                               (slidesIndex)="currentIndex=$event"></app-list-products>-->
+          </div>
 
-<ion-content>
-
-</ion-content>
+          <div class="payment"
+               style="width: 24rem; display: flex; flex-direction: column; padding: 0 1rem;">
+            <div class="payment-header"
+                 style="height: 3rem; color: #184c7c; display: flex; justify-content: space-between; align-items: center"
+                 *ngIf="currentLocation$ | async">
+              <div>
+                <!--                {{location.name}} | <strong>Table {{table?.code}}</strong>-->
+              </div>
+              <button>
+                <img src="/assets/icon/bell.png" alt="" style="height: 2.5rem; width: 2.5rem">
+              </button>
+            </div>
+            <!--            <app-payment [table]="table" [golfClub]="golfClub"></app-payment>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </ion-content>
+</ion-app>
