--- a/src/app/order/order.page.scss
+++ b/src/app/order/order.page.scss
@@ -35,6 +35,15 @@ ion-content {
   overflow: auto;
   padding-top: 25px;
 
+  .skeleton-menu-item {
+    margin: 15px 15px 25px 15px;
+    padding: 7.5px 5px;
+
+    ion-thumbnail {
+      width: 100%;
+    }
+  }
+
   .menu-item {
     margin: 15px 15px 25px 15px;
     border-radius: 17.5px;
@@ -82,4 +91,18 @@ ion-searchbar {
     border-radius: 10px;
     margin: 7.5px 0 7.5px 7.5px;
   }
+}
+
+.category-item {
+  cursor: pointer;
+}
+
+
+.product-item {
+  width: 200px;
+  height: 200px;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  text-align: center;
+  margin: 22.5px;
+  position: relative;
 }
