--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -35,8 +35,8 @@
               {{'food_beverages'| translate}}
             </div>
             <div style="padding-left: 10px; flex: 1">
-              <ion-searchbar [placeholder]="'search_item' | translate" [(ngModel)]="filter.search"
-                             (ngModelChange)="updateSearch()"></ion-searchbar>
+              <ion-searchbar [placeholder]="'search_item' | translate" [value]="(productFilter$ | async)?.search"
+                             (input)="updateSearch($event)"></ion-searchbar>
             </div>
           </div>
           <button style="margin-left: 1.5rem" (click)="toggleLang()">
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-            <div style="width: 100%; height: 100%">
+            <div style="flex: 1; width: 100%">
               <ion-slides pager="true" (ionSlideWillChange)="triggerSlideTo($event)">
                 <ion-slide *ngFor="let slide of slides$ | async">
                   <ng-container *ngIf="slide.status === 'loading'">
@@ -71,7 +71,7 @@
                       </ion-thumbnail>
                     </div>
                   </ng-container>
-                  <div style=" display: flex; flex-wrap: wrap">
+                  <div style=" display: flex; flex-wrap: wrap" *ngIf="slide.status === 'loaded'">
                     <div class="product-item" *ngFor="let product of slide.products">
                       <ion-img [src]="product.image ? product.image : 'http://placehold.it/380'"></ion-img>
                       <div
@@ -79,6 +79,9 @@
                         <strong>{{currentLang === 'en' ? product.name : product.other_name}}</strong>
                         <div>{{product.sale_price | formatCurrency}}</div>
                       </div>
+                    </div>
+                    <div *ngIf="slide.products.length === 0">
+                      No thing to show!
                     </div>
                   </div>
                 </ion-slide>
