--- a/src/app/order/order.page.scss
+++ b/src/app/order/order.page.scss
@@ -10,7 +10,9 @@ ion-content {
   display: flex;
   align-items: center;
   min-width: 0;
+  min-height: 48px;
   width: 100%;
+  margin-left: 14px;
 
   .category-item {
     margin-right: 1rem;
@@ -103,6 +105,8 @@ ion-searchbar {
   height: 200px;
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
   text-align: center;
-  margin: 22.5px;
+  margin: 14px;
   position: relative;
+  border-radius: 15px;
+  overflow: hidden;
 }
