--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -72,14 +72,8 @@
                     </div>
                   </ng-container>
                   <div style=" display: flex; flex-wrap: wrap" *ngIf="slide.status === 'loaded'">
-                    <div class="product-item" *ngFor="let product of slide.products">
-                      <ion-img [src]="product.image ? product.image : 'http://placehold.it/380'"></ion-img>
-                      <div
-                        style="position: absolute; bottom: 0; padding: 0.5rem; width: 100%; background: white; font-size: 70%">
-                        <strong>{{currentLang === 'en' ? product.name : product.other_name}}</strong>
-                        <div>{{product.sale_price | formatCurrency}}</div>
-                      </div>
-                    </div>
+                    <app-product-item *ngFor="let product of slide.products" [product]="product"></app-product-item>
+
                     <div *ngIf="slide.products.length === 0">
                       No thing to show!
                     </div>
@@ -87,10 +81,7 @@
                 </ion-slide>
               </ion-slides>
             </div>
-            <!--            <app-list-products [location]="location" (slidesLength)="updatePagination($event)"-->
-            <!--                               (slidesIndex)="currentIndex=$event"></app-list-products>-->
           </div>
-
           <div class="payment"
                style="width: 24rem; display: flex; flex-direction: column; padding: 0 1rem;">
             <div class="payment-header"
@@ -103,7 +94,7 @@
                 <img src="/assets/icon/bell.png" alt="" style="height: 2.5rem; width: 2.5rem">
               </button>
             </div>
-            <!--            <app-payment [table]="table" [golfClub]="golfClub"></app-payment>-->
+            <app-payment></app-payment>
           </div>
         </div>
       </div>
