--- a/src/app/order/order.page.scss
+++ b/src/app/order/order.page.scss
@@ -100,7 +100,7 @@ ion-searchbar {
 }
 
 
-.product-item {
+:host ::ng-deep .product-item {
   width: 200px;
   height: 200px;
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
@@ -109,4 +109,16 @@ ion-searchbar {
   position: relative;
   border-radius: 15px;
   overflow: hidden;
+  cursor: pointer;
+  transition: width 2s;
+
+  &:hover {
+    opacity: 0.8;
+    border: 1px solid var(--ion-color-primary);
+  }
+
+  &:active, &.disabled {
+    opacity: 0.6;
+    border: 1px solid var(--ion-color-primary);
+  }
 }
