--- a/src/app/order/components/payment/payment.component.scss
+++ b/src/app/order/components/payment/payment.component.scss
@@ -26,7 +26,10 @@
   display: flex;
   padding-bottom: 10px;
   padding-top: 10px;
+  padding-right: 5px;
   align-items: center;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .item-name {
