--- a/src/app/order/components/payment/payment.component.html
+++ b/src/app/order/components/payment/payment.component.html
@@ -29,22 +29,19 @@
         </div>
         <div style="display: flex; justify-content: space-between">
           <div style="white-space: nowrap">
-            {{'payment_method' | translate}}:
+            {{'payment_type' | translate}}:
           </div>
           <div style="display: flex; flex-wrap: wrap; justify-content: flex-end">
-            <button class="btn btn-sm btn-method" [class.active]="order.payment_method === 'CASH'"
-                    (click)="order.payment_method = 'CASH'" [disabled]="!!order.guest || someItemHasGuest">
-              <!--          <img src="/assets/images/icon/cash.svg" alt="">-->
+            <button class="btn btn-sm btn-method" [class.active]="order.payment_type == 'CASH'"
+                    (click)="setPaymentType('CASH')" [disabled]="!!order.guest || someItemHasGuest">
               {{'cash' | translate}}
             </button>
-            <button class="btn btn-sm btn-method" [class.active]="order.payment_method === 'VOUCHER'"
-                    (click)="order.payment_method = 'VOUCHER'">
-              <!--          <img src="/assets/images/icon/voucher-white.svg" alt="">-->
+            <button class="btn btn-sm btn-method" [class.active]="order.payment_type === 'VOUCHER'"
+                    (click)="setPaymentType('VOUCHER')">
               {{'voucher' | translate}}
             </button>
-            <button class="btn btn-sm btn-method" [class.active]="order.payment_method === 'WITH_GOLF'"
-                    (click)="order.payment_method = 'WITH_GOLF'">
-              <!--          <img src="/assets/images/icon/paywithgolf.svg" alt="">-->
+            <button class="btn btn-sm btn-method" [class.active]="order.payment_type === 'WITH_GOLF'"
+                    (click)="setPaymentType('WITH_GOLF')">
               {{'pay_with_golf' | translate}}
             </button>
           </div>
