--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -82,8 +82,7 @@
               </ion-slides>
             </div>
           </div>
-          <div class="payment"
-               style="width: 24rem; display: flex; flex-direction: column; padding: 0 1rem;">
+          <div class="payment" style="width: 24rem; display: flex; flex-direction: column; padding: 0 1rem;">
             <div class="payment-header"
                  style="height: 3rem; color: #184c7c; display: flex; justify-content: space-between; align-items: center; font-size: 1.2rem"
                  *ngIf="currentLocation$ | async">
