--- a/src/app/order/components/payment/detail-order-item/detail-order-item.component.html
+++ b/src/app/order/components/payment/detail-order-item/detail-order-item.component.html
@@ -31,7 +31,8 @@
           <div class="my-label">
             {{'description' | translate}}:
           </div>
-          <textarea #inputDescription [value]="item.description" placeholder="Description"
+          <textarea #inputDescription [value]="item.description || ''" placeholder="Description"
+                    (change)="updateDescription($event.target.value)"
                     (focus)="markFocus('inputDescription')"
                     style="flex: 1; height: 100%; border:1px solid #cbcbcb;padding-top: 10px  "></textarea>
         </div>
